Fix price wrapping

--- a/styles.less
+++ b/styles.less
@@ -48,6 +48,7 @@
 
     h5 {
       display: flex;
+      gap: 1.5rem;
       justify-content: space-between;
       align-items: center;
       font-size: 15px;
@@ -60,6 +61,7 @@
       padding: 3px 6px;
       font-weight: normal;
       border-radius: 3px;
+      white-space: nowrap;
 
       &.no-cost {
         background: #e4e4e4;
